tests/ui/async-await/issues/issue-107280.stderr
error[E0107]: function takes 2 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-107280.rs:4:5
   |
LL |     inner::<false>().await
   |     ^^^^^   ----- supplied 1 generic argument
   |     |
   |     expected 2 generic arguments
   |
note: function defined here, with 2 generic parameters: `T`, `PING`
  --> $DIR/issue-107280.rs:8:10
   |
LL | async fn inner<T, const PING: bool>() {}
   |          ^^^^^ -  ----------------
help: add missing generic argument
   |
LL |     inner::<false, PING>().await
   |                  ++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
